[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mltiming"
version = "0.0.4"
authors = [
  { name = "Peter Schneider-Kamp" }
]

description = "A timing context manager for typical ML training."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/mltiming"
"Bug Tracker" = "https://github.com/schneiderkamplab/mltiming/issues"

[tool.hatch.build]
include = [
    'mltiming',
    'LICENSE',
    'README.md',
]
